removed mutation testing, check task was long enough that LLMs timed out. Also, not much added value tbh